Improvements to BasicURLNormalizer - better percent-encoding of URL paths and queries, fixes #263 - hostnames:   * convert IDNs from Unicode to Punycode, fixes #248   * remove trailing dot - normalize path `/..` to `/` - also normalize path of file:/ URLs